# aragora

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitguardian.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivy.yaml  .trivyignore  :memory:  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Enterprise_Multi_Agent_Control_Plane_Report.docx  INSTALL.md  MANIFEST.in  Makefile  NEXT_STEPS.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_INPUT_VALIDATION.md  TROUBLESHOOTING.md  action.yml  alembic.ini  aragora-demo-receipt.json  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.quickstart.yml  docker-compose.simple.yml  docker-compose.sme.yml  docker-compose.yml  elo_snapshot.json  github-app-manifest.json  gmail_failures.json  k8s  (+11 more)
.checkpoints/: exec_7b807882df83_20260121_013002.json  exec_7b807882df83_20260121_013003.json  exec_7b807882df83_20260121_013004.json  exec_7b807882df83_20260121_013005.json  exec_7b807882df83_20260121_013006.json  exec_7b807882df83_20260121_013007.json  exec_7b807882df83_20260121_013008.json  exec_7b807882df83_20260121_013009.json  exec_7b807882df83_20260121_013010.json  exec_7b807882df83_20260121_013011.json  exec_7b807882df83_20260121_013012.json  exec_7b807882df83_20260121_013013.json  exec_7b807882df83_20260121_013014.json  exec_7b807882df83_20260121_013015.json  exec_7b807882df83_20260121_013016.json  exec_7b807882df83_20260121_013017.json  exec_7b807882df83_20260121_013018.json  wf_009cdce36389_20260120_125233.json  wf_02d06885e25c_20260120_130533.json  wf_08b7bc88577a_20260120_123745.json  wf_0bdfe417e66d_20260120_123805.json  wf_0c3fdfcb14fa_20260120_125736.json  wf_18dd4c74d2c7_20260120_125735.json  wf_1b096a2ef04b_20260120_132209.json  wf_1f602b30c71e_20260120_130534.json  wf_2a0ebce9d8e0_20260120_125736.json  wf_2b494ef6f63b_20260120_123804.json  wf_2b4ad0693f84_20260120_125233.json  wf_2becfb80b398_20260120_123752.json  wf_2c10193eb830_20260120_125736.json  wf_32be5988cbc7_20260120_123805.json  wf_32e50a2d20bf_20260120_130534.json  wf_3310dcc43442_20260120_125735.json  wf_3711e6ed2293_20260120_125735.json  wf_3c99973e6cba_20260120_132208.json  wf_46187eaed145_20260120_123752.json  wf_4689a475e4b6_20260120_132209.json  wf_4fa6ba125ff5_20260120_123804.json  wf_546b991de6f5_20260120_125736.json  wf_54f32d92fea0_20260120_125233.json  (+67 more)
.claude/: settings.json
.convoys/: assignments.jsonl
.devcontainer/: devcontainer.json
.githooks/: pre-commit  (+1 more)
aragora-debate/: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
aragora-debate/docs/: INTEGRATION.md
aragora-debate/examples/: architecture_review.py  compliance_audit.py  hiring_decision.py  trickster_demo.py
aragora-debate/src/aragora_debate/: __init__.py  __main__.py  _mock.py  agents.py  arena.py  convergence.py  cross_analysis.py  debate.py  events.py  evidence.py  receipt.py  styled_mock.py  trickster.py  types.py
aragora-debate/tests/: test_agents.py  test_arena.py  test_convergence.py  test_cross_analysis.py  test_debate.py  test_events.py  test_evidence.py  test_mock_styles.py  test_receipt.py  test_trickster.py  test_types.py
aragora-sdk/: README.md  pyproject.toml
aragora-sdk/aragora_sdk/: __init__.py  client.py  exceptions.py
sdk/python/: BREAKING_CHANGES.md  Makefile  README.md  __init__.py  aragora_client.py  pyproject.toml
sdk/python/aragora/: __init__.py  client.py  events.py  exceptions.py  generated_types.py  pagination.py  streaming.py  websocket.py
sdk/python/aragora/cli/: __init__.py  main.py
sdk/python/aragora/namespaces/: __init__.py  accounting.py  admin.py  advertising.py  agent_selection.py  agents.py  analytics.py  ap_automation.py  audio.py  audit.py  auditing.py  auth.py  backups.py  batch.py  belief.py  belief_network.py  billing.py  bots.py  budgets.py  calibration.py  classify.py  codebase.py  computer_use.py  connectors.py  consensus.py  control_plane.py  cross_pollination.py  dashboard.py  debates.py  decisions.py  deliberations.py  devices.py  disaster_recovery.py  documents.py  email_priority.py  email_services.py  evaluation.py  evolution.py  expenses.py  explainability.py  (+58 more)
sdk/python/aragora_sdk/: CLAUDE.md  __init__.py  client.py  demo.py  generated_types.py  pagination.py  websocket.py
sdk/python/aragora_sdk/namespaces/: CLAUDE.md  __init__.py  a2a.py  accounting.py  actions.py  admin.py  agent_dashboard.py  agent_selection.py  agents.py  analytics.py  ap_automation.py  approvals.py  ar_automation.py  audience.py  audio.py  audit.py  audit_trail.py  auditing.py  auth.py  autonomous.py  backups.py  batch.py  belief.py  belief_network.py  benchmarks.py  billing.py  blockchain.py  bots.py  breakpoints.py  budgets.py  calibration.py  canvas.py  channels.py  chat.py  checkpoints.py  classify.py  code_review.py  codebase.py  compliance.py  computer_use.py  (+139 more)
sdk/python/examples/: README.md  agent_selection.py  async_vs_sync.py  basic_debate.py  batch_operations.py  configuration.py  control_plane_example.py  error_handling.py  explainability_deep_dive.py  knowledge_integration.py  multi_agent_comparison.py  realtime_collaboration.py  receipts_demo.py  streaming_debate.py  workflow_automation.py  workflow_chains.py
sdk/python/tests/: CLAUDE.md  conftest.py  test_agent_selection.py  test_agents.py  test_analytics.py  test_audio.py  test_audit.py  test_auditing.py  test_auth.py  test_authentication.py  test_backups.py  test_benchmarks.py  test_billing.py  test_checkpoints.py  test_client.py  test_client_namespaces.py  test_codebase.py  test_computer_use.py  test_control_plane.py  test_coordination_namespace.py  test_cross_sdk_parity_routes.py  test_dashboard.py  test_debates.py  test_decisions.py  test_deliberations.py  test_dependency_analysis.py  test_disaster_recovery.py  test_email_debate.py  test_errors.py  test_evaluation.py  test_events.py  test_explainability.py  test_external_agents.py  test_facts.py  test_gateway.py  test_gauntlet.py  test_inbox_command.py  test_index.py  test_integrations.py  test_knowledge.py  (+31 more)
(+13376 files in other folders)
