[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aragora"
version = "0.07"
description = "Multi-Agent Debate Framework with traces, consensus proofs, red-team mode, self-improvement, templates, and GitHub Actions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Agora Contributors"}
]
keywords = [
    "ai",
    "multi-agent",
    "debate",
    "llm",
    "claude",
    "gpt",
    "consensus",
    "self-improvement",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "bcrypt>=4.0",  # Secure password hashing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "black>=23.0",
    "ruff>=0.1",
    "bandit>=1.7",
    "mypy>=1.8",
    "mutmut>=3.0",
]
monitoring = [
    "prometheus-client>=0.19",
    "sentry-sdk>=2.0",
]
persistence = [
    "supabase>=2.0",
    "sqlalchemy>=2.0.40",
]
documents = [
    "pypdf>=3.0",
    "python-docx>=0.8",
]
broadcast = [
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "pyttsx3>=2.90;platform_system=='Darwin' or platform_system=='Windows'",
]
broadcast-elevenlabs = [
    "aragora[broadcast]",
    "elevenlabs>=1.0",
]
broadcast-xtts = [
    "aragora[broadcast]",
    "TTS>=0.22",  # Coqui TTS for XTTS v2 (requires torch)
]
broadcast-premium = [
    "aragora[broadcast-elevenlabs,broadcast-xtts]",
]
research = [
    "duckduckgo-search>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]
ml = [
    "numpy>=2.0,<3",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.2",
    "sentence-transformers>=3.0.0",
]
all = [
    "aragora[dev,persistence,documents,broadcast-premium,research,monitoring,ml]",
]

[project.scripts]
aragora = "aragora.cli.main:main"

[project.urls]
Homepage = "https://aragora.ai"
Documentation = "https://github.com/an0mium/aragora#readme"
Repository = "https://github.com/an0mium/aragora"
Issues = "https://github.com/an0mium/aragora/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aragora*"]

[tool.setuptools.package-data]
"aragora.fixtures" = ["*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # Ignore pytest collection warnings for non-test classes in pipeline/test_plan.py
    "ignore:cannot collect test class.*:pytest.PytestCollectionWarning",
    # Ignore unawaited coroutine warnings from AsyncMock cleanup during tests
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "load: marks tests as load/stress tests (deselect with '-m \"not load\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
    ".venv/",
    "node_modules/",
]
# Start non-strict globally, enable per-module
check_untyped_defs = false
disallow_untyped_defs = false

# Strict settings for core modules (enable incrementally)
[[tool.mypy.overrides]]
module = [
    "aragora.core",
    "aragora.config",
    "aragora.persistence.db_config",
    "aragora.persistence.models",
    "aragora.server.validation",
    "aragora.protocols",
    "aragora.ranking.elo_core",
    "aragora.debate.autonomic_executor",
    "aragora.debate.sanitization",
    "aragora.resilience",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# Moderate settings - check untyped defs but don't require annotations
[[tool.mypy.overrides]]
module = [
    "aragora.server.handlers.*",
    "aragora.ranking.elo",
    "aragora.ranking.relationships",
    "aragora.agents.base",
    "aragora.agents.registry",
    "aragora.debate.context",
    "aragora.debate.protocol",
    "aragora.debate.roles",
    "aragora.templates",
    "aragora.exceptions",
]
check_untyped_defs = true

# Allow untyped for complex modules (can be tightened later)
[[tool.mypy.overrides]]
module = [
    "aragora.debate.orchestrator",
    "aragora.agents.api_agents",
    "aragora.agents.cli_agents",
    "aragora.memory.continuum",
]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.mutmut]
paths_to_mutate = "aragora/core.py,aragora/ranking/elo.py,aragora/ranking/elo_core.py"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=no -q"
dict_synonyms = "Struct,NamedTuple,Dict"
backup = false
