[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aragora"
version = "1.0.0"
description = "Multi-Agent Debate Framework with traces, consensus proofs, red-team mode, self-improvement, templates, and GitHub Actions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Agora Contributors"}
]
keywords = [
    "ai",
    "multi-agent",
    "debate",
    "llm",
    "claude",
    "gpt",
    "consensus",
    "self-improvement",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9,<4.0",
    "websockets>=12.0,<14.0",
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "bcrypt>=4.0,<5.0",  # Secure password hashing
    "markupsafe>=2.1.0,<3.0",  # HTML escaping for XSS prevention
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.21,<1.0",
    "pytest-cov>=4.0,<6.0",
    "pytest-timeout>=2.0,<3.0",
    "black>=23.0,<25.0",
    "ruff>=0.1,<1.0",
    "bandit>=1.7,<2.0",
    "mypy>=1.8,<2.0",
    "mutmut>=3.0,<4.0",
]
monitoring = [
    "prometheus-client>=0.19,<1.0",
    "sentry-sdk>=2.0,<3.0",
]
observability = [
    "opentelemetry-api>=1.20.0,<2.0",
    "opentelemetry-sdk>=1.20.0,<2.0",
    "opentelemetry-exporter-otlp>=1.20.0,<2.0",
    "opentelemetry-instrumentation-logging>=0.41b0,<1.0",
    "prometheus-client>=0.19,<1.0",
]
redis = [
    "redis>=5.0.0,<6.0",
]
persistence = [
    "supabase>=2.0,<3.0",
    "sqlalchemy>=2.0.40,<3.0",
]
postgres = [
    "asyncpg>=0.29.0,<1.0",
]
documents = [
    "pypdf>=3.0,<5.0",
    "python-docx>=0.8,<2.0",
]
broadcast = [
    "edge-tts>=6.1.0,<7.0",
    "pydub>=0.25.0,<1.0",
    "pyttsx3>=2.90,<3.0;platform_system=='Darwin' or platform_system=='Windows'",
]
broadcast-elevenlabs = [
    "aragora[broadcast]",
    "elevenlabs>=1.0,<2.0",
]
broadcast-polly = [
    "aragora[broadcast]",
    "boto3>=1.34,<2.0",
]
broadcast-xtts = [
    "aragora[broadcast]",
    "TTS>=0.22,<1.0",  # Coqui TTS for XTTS v2 (requires torch)
]
broadcast-premium = [
    "aragora[broadcast-elevenlabs,broadcast-polly,broadcast-xtts]",
]
research = [
    "duckduckgo-search>=6.0,<8.0",
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
]
ml = [
    "numpy>=2.0,<3.0",
    "scipy>=1.14.0,<2.0",  # 1.14.0+ required for NumPy 2.x support
    "scikit-learn>=1.5.0,<2.0",  # 1.5.0+ required for NumPy 2.x support
    "sentence-transformers>=3.0.0,<4.0",
]
all = [
    "aragora[dev,persistence,documents,broadcast-premium,research,monitoring,ml]",
]

[project.scripts]
aragora = "aragora.cli.main:main"

[project.urls]
Homepage = "https://aragora.ai"
Documentation = "https://github.com/an0mium/aragora#readme"
Repository = "https://github.com/an0mium/aragora"
Issues = "https://github.com/an0mium/aragora/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aragora*"]

[tool.setuptools.package-data]
"aragora.fixtures" = ["*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "T201", "BLE001"]  # T201 = print, BLE001 = bare except
ignore = ["E501"]

[tool.ruff.per-file-ignores]
# Allow print statements in CLI modules, migrations, and scripts
"aragora/cli/*" = ["T201"]
"aragora/migrations/*" = ["T201"]
"aragora/db/migrate.py" = ["T201"]
"aragora/persistence/migrations/*" = ["T201"]
"aragora/training/exporters/*" = ["T201"]  # CLI export tools
"scripts/*" = ["T201"]
"tests/*" = ["T201"]
# Allow bare except in cleanup code (pool overflow) and metrics tracking
"aragora/storage/backends.py" = ["BLE001"]
"aragora/server/metrics.py" = ["BLE001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # Ignore pytest collection warnings for non-test classes in pipeline/test_plan.py
    "ignore:cannot collect test class.*:pytest.PytestCollectionWarning",
    # Ignore unawaited coroutine warnings from AsyncMock cleanup during tests
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "load: marks tests as load/stress tests (deselect with '-m \"not load\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "typings"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
    ".venv/",
    "node_modules/",
]
# Start non-strict globally, enable per-module
check_untyped_defs = false
disallow_untyped_defs = false

# Strict settings for core modules (enable incrementally)
[[tool.mypy.overrides]]
module = [
    "aragora.core",
    "aragora.config",
    "aragora.persistence.db_config",
    "aragora.persistence.models",
    "aragora.server.validation",
    "aragora.protocols",
    "aragora.ranking.elo_core",
    "aragora.debate.autonomic_executor",
    "aragora.debate.sanitization",
    "aragora.resilience",
    # Added strict - clean modules (Jan 2026)
    "aragora.debate.termination_checker",
    "aragora.debate.team_selector",
    "aragora.debate.convergence",
    "aragora.exceptions",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# Moderate settings - check untyped defs but don't require annotations
[[tool.mypy.overrides]]
module = [
    "aragora.server.handlers.*",
    "aragora.ranking.elo",
    "aragora.ranking.relationships",
    "aragora.agents.base",
    "aragora.agents.registry",
    "aragora.debate.context",
    "aragora.debate.protocol",
    "aragora.debate.roles",
    "aragora.templates",
]
check_untyped_defs = true

# Moderate-strict for complex modules (check untyped defs)
[[tool.mypy.overrides]]
module = [
    "aragora.debate.orchestrator",
    "aragora.agents.api_agents.*",
    "aragora.memory.continuum",
    "aragora.memory.consensus",
    "aragora.memory.streams",
]
disallow_untyped_defs = false
check_untyped_defs = true

# Allow untyped for deprecated modules
[[tool.mypy.overrides]]
module = [
    "aragora.agents.cli_agents",
]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.mutmut]
paths_to_mutate = "aragora/core.py,aragora/ranking/elo.py,aragora/ranking/elo_core.py"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=no -q"
dict_synonyms = "Struct,NamedTuple,Dict"
backup = false

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["aragora"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "aragora/live/*",  # Frontend code
    "*/migrations/*",
]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "\\.\\.\\.",  # Ellipsis
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
